--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,12 +37,12 @@ li{
 #twoText{
 	/*float: left;*/
 	font-weight: 900;
-	font-size: 90px !important;
+	font-size: 100px !important;
 }
 
 #two{
 	text-align: left;
-
+    color: darkblue;
 	/*color: #f5f50a;*/
 	/*color: gray;*/
 }
